14-Nov-2012 Removed Opus.Core.AssignOptionCollectionAttribute as it is has been superceded by Toolsets.

14-Nov-2012 Removed Opus.Core.RegisterTargetToolChainAttribute as it has been superceded by Toolsets.

14-Nov-2012 Removed C.ClassNames as it has been superceded by Toolsets and tool interfaces.

14-Nov-2012 Removed Opus.Core.AssignToolForModuleAttribute as it has been superceded by Toolsets.

14-Nov-2012 Removed Opus.Core.MapToolChainClassTypesAttribute as it has been superceded by Toolsets.

14-Nov-2012 Removed Opus.Core.TargetCollection that is no longer used.

14-Nov-2012 VisualCCommon.ICCompilerOptions now has a RuntimeLibrary option. This is in replacement to the option from the now removed Toolchain.

14-Nov-2012 CSharp Csc tool has moved to the DotNetFramework package, the latter of which now implements a 'dotnet' toolset.

14-Nov-2012 Tool interfaces are now required for each type of tool implemented. Local and export types must be assigned to the interfaces using the Opus.Core.LocalAndExportTypes attribute. Toolset providers must also be provided using the Opus.Core.AssignToolsetProvider attribute.

14-Nov-2012 Opus.Core.AssignToolsetProvider is a new attribute for tool interfaces that accept a name of a toolset, or a type of a class and a delegate method in that class to dynamically assign a toolset.

14-Nov-2012 C and C++ compilers are now separate tool interfaces.

14-Nov-2012 Modules now require an attribute of Opus.Core.ModuleToolAssignment, which accepts one argument, the type of the tool interface to use to build the module. The type may be null to indicate no tool required.

14-Nov-2012 Added actions to override the C compiler, C++ compiler, Linker, Archiver, and Win32 resource compiler by specifying the toolset defining the tool:
* -C.CC=<toolset>
* -C.CXX=<toolset>
* -C.LINK=<toolset>
* -C.AR=<toolset>
* -C.RC=<toolset>

14-Nov-2012 Optimized header file dependency checking for Native C object file builds.
