@@ -1,12 +1,11 @@
-﻿// <copyright file="IToolRequiredEnvironmentVariables.cs" company="Mark Final">
+﻿// <copyright file="IToolForwardedEnvironmentVariables.cs" company="Mark Final">
 //  Opus
 // </copyright>
 // <summary>Opus Core</summary>
 // <author>Mark Final</author>
 namespace Opus.Core
 {
-    // TODO: rename to IToolForwardedEnvironmentVariables
-    public interface IToolRequiredEnvironmentVariables
+    public interface IToolForwardedEnvironmentVariables
     {
         StringArray VariableNames
         {
