@@ -1,3 +1,5 @@
+15-Nov-2012 Renamed Opus.Core.IToolRequiredEnvironmentVariables to Opus.Core.IToolForwardedEnvironmentVariables
+
 14-Nov-2012 Removed Opus.Core.AssignOptionCollectionAttribute as it is has been superceded by Toolsets.
 
 14-Nov-2012 Removed Opus.Core.RegisterTargetToolChainAttribute as it has been superceded by Toolsets.
